--- a/style.css
+++ b/style.css
@@ -59,10 +59,13 @@ main{
   margin: 10px;
   padding: 10px;
   p{
-    font-size: 10px;
+    font-size: 13px;
   }
   p:nth-child(2){
     padding: 20px 0;
+  }
+  p:nth-child(3){
+    color:blue
   }
  
 }
